Version 1.3 Patch Level 3

General. ------------------------------------------------------------------
Update to documentation including klogd.8 manpage to reflect new features.

Included patch for modules-2.0.0 package to provide support for signalling
klogd of changes in kernel module status.

klogd ---------------------------------------------------------------------
Provided support for signalling klogd to reload static and kernel module
symbol information via SIGUSR1 and SIGUSR2.

Implemented -p switch to cause a reload of kernel module symbol information
whenever a protection fault is detected.

Informative message is printed whenever klogd state change occurs.

Added -i and -I switches to signal the currently executing klogd daemon
to reload symbold information.


Version 1.3 Patch Level 2

General. ------------------------------------------------------------------
Added oops.c and oops_test.c.  Oops.c implements a kernel loadable module
which will generate a general protection fault.  The oops_test.c program
generates a test program for exercising the loadable module.

syslogd ------------------------------------------------------------------
Fixed bug resulting in file descriptors being orphaned when syslogd was
initialized via signal handler.

klogd ---------------------------------------------------------------------
Bug fix to prevent errors when reading symbol tables with 64 bit addresses.

Added support for debugging of protection faults occuring in kernel
loadable modules.


Version 1.3 Patch Level 1

General. ------------------------------------------------------------------
Cleanups in the Makefile.

Patches to support compilation in the ALPHA environment.  I have not
been able to test these personally so if anyone has any feedback I
would be interested in hearing from the Linux ALPHA community.

Spelling and grammar corrections in the man pages.

syslogd ------------------------------------------------------------------