@@ -1,3 +1,7 @@
+Recent version
+General. ------------------------------------------------------------------
+Please refer to the file debian/changelog.
+
 Version 1.3 Patch Level 3
 
 General. ------------------------------------------------------------------
